--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.17.1",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "joi": "^18.0.2"
   }
 }
