--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.8.1",
     "dotenv": "^17.2.3",
     "eslint": "^9.38.0",
@@ -33,6 +35,7 @@
     "@prisma/client": "^6.17.1",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
-    "joi": "^18.0.2"
+    "joi": "^18.0.2",
+    "jsonwebtoken": "^9.0.2"
   }
 }
