--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.17.1",
+    "@supabase/supabase-js": "^2.90.1",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "joi": "^18.0.2",
